--- a/labo7/personalhomepageassigment/style/style.css
+++ b/labo7/personalhomepageassigment/style/style.css
@@ -59,7 +59,8 @@ div> table { border-collapse: collapse; text-align: left; width: 100%; }
 div {font: normal 12px/150% Arial, Helvetica, sans-serif; background: #fff; overflow: hidden; border: 1px solid #991821; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
 div  table td,
 div table th { padding: 3px 10px; }
-div table thead th {background:  -webkit-gradient( linear, left top, left bottom, color-stop(0.05, #991821), color-stop(1, #80141C) )background:-moz-linear-gradient( center top, #991821 5%, #80141C 100% );filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#991821', endColorstr='#80141C');background-color:#991821; color:#FFFFFF; font-size: 15px; font-weight: bold; border-left: 1px solid #B01C26; }
+div table thead th {background:  gradient( linear, left top, left bottom, color-stop(0.05, #991821), color-stop(1, #80141C) )
+    background:-moz-linear-gradient( center top, #991821 5%, #80141C 100% );filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#991821', endColorstr='#80141C');background-color:#991821; color:#FFFFFF; font-size: 15px; font-weight: bold; border-left: 1px solid #B01C26; }
 div table thead th:first-child { border: none; }
 div table tbody td { color: #80141C; border-left: 1px solid #F7CDCD;font-size: 12px;font-weight: normal; }
 div table tbody .alt td { background: #F7CDCD; color: #80141C; }
