--- a/labo10/Demo/Demo-responsive-studenten/Demo-responsive-studenten/Bootstrap/style/style.css
+++ b/labo10/Demo/Demo-responsive-studenten/Demo-responsive-studenten/Bootstrap/style/style.css
@@ -15,11 +15,13 @@ header {
 #left {
     background-color:lightblue;
     min-height: 200px;
+    float: left;
 }
 
 #right {
     background-color:lightcoral;
     min-height: 200px;
+    float: right;
 }
 
 footer {
