--- a/labo10/beginsituatie_bootstrap5/Oefening2/style/bootstrap-grid.css
+++ b/labo10/beginsituatie_bootstrap5/Oefening2/style/bootstrap-grid.css
@@ -1,3 +1,4 @@
+
 /*!
  * Bootstrap Grid v5.0.2 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -670,7 +671,7 @@
     width: 33.33333333%;
   }
 
-   {
+  .col-md-5 {
     flex: 0 0 auto;
     width: 41.66666667%;
   }
